footer address alignment fixed at mobile adjustment

--- a/styles/about.css
+++ b/styles/about.css
@@ -419,6 +419,7 @@ svg:hover {
   .address {
     padding-top: 1.45rem;
     padding-left: 0rem;
+    padding-right: 0rem;
     width: auto;
     text-align: -webkit-center;
     }
